--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,46 +1,36 @@
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+<!-- Footer -->
+<footer id="footer">
+    <div class="container footer-container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto my-auto">
+                <ul class="list-inline text-center">
+
+                    <li class="list-inline-item">
+                        <a href="https://www.linkedin.com/in/pablo-adrián-uboldi-71755141/">
+                            <span class="fa-stack fa-md">
+                                <i class="fas fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-linkedin fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+
+                    <li class="list-inline-item">
+                        <a href="https://github.com/pablouboldi">
+                            <span class="fa-stack fa-md">
+                                <i class="fas fa-square fa-stack-2x"></i>
+                                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+
+                </ul>
+                <span class="copyright text-muted">Copyright &copy; Pablo Uboldi 2022</span>
+            </div>
         </div>
-      </div>
     </div>
-  </footer>
+</footer>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js')}}"></script>
-  <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="{{ url_for('static', filename='js/clean-blog.min.js')}}"></script>
+<!--Photo by <a href="https://unsplash.com/@jinen?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jinen Shah</a> on <a href="https://unsplash.com/s/photos/minimal-rocket?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
 
 </body>
 
