--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="main-container d-flex flex-column flex-md-row">
             <div class="col-lg-6 col-md-6">
-                <a href="{{ url_for('about') }}"><img class="project-img"
+                <a href="https://github.com/pablouboldi/morse-text-converter"><img class="project-img"
                                                       src='{{ url_for("static", filename="img/morse.png")}}'
                                                       alt="project-1-img"></a>
             </div>
@@ -28,7 +28,7 @@
 
         <div class="main-container d-flex  flex-column flex-md-row-reverse">
             <div class="col-lg-6 col-md-6">
-                <a href="#"><img class="project-img" src='{{ url_for("static", filename="img/wordle.png")}}'
+                <a href="https://github.com/pablouboldi/wordle-game-stats"><img class="project-img" src='{{ url_for("static", filename="img/wordle.png")}}'
                                  alt="project-2-img"></a>
             </div>
             <div class="col-lg-4 col-md-6" id="text-2">
@@ -41,19 +41,19 @@
         </div>
 
 
-        <div class="main-container d-flex  flex-column flex-md-row">
-            <div class="col-lg-6 col-md-6">
-                <a href="{{ url_for('portfolio') }}"><img class="project-img"
-                                                          src='{{ url_for("static", filename="img/portfolio.png")}}'
-                                                          alt="project-3-img"></a>
-            </div>
-            <div class="col-lg-4 col-md-6" id="text-3">
-                <h2>My portfolio</h2>
-                <p>
-                    Check out some projects I did and tell me which one is your favourite.
-                </p>
-            </div>
-        </div>
+<!--        <div class="main-container d-flex  flex-column flex-md-row">-->
+        <!--            <div class="col-lg-6 col-md-6">-->
+        <!--                <a href="#"><img class="project-img"-->
+        <!--                                                          src='{{ url_for("static", filename="img/portfolio.png")}}'-->
+        <!--                                                          alt="project-3-img"></a>-->
+        <!--            </div>-->
+        <!--            <div class="col-lg-4 col-md-6" id="text-3">-->
+        <!--                <h2>My portfolio</h2>-->
+        <!--                <p>-->
+        <!--                    Check out some projects I did and tell me which one is your favourite.-->
+        <!--                </p>-->
+        <!--            </div>-->
+        <!--        </div>-->
 
 
     </div>
