Update te text in about.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,8 +14,12 @@
             <p class="about-me">
                 I graduated from the National Technological University of Buenos Aires, and,
                 currently, I am training myself for becoming a full-stack developer.
+            </p>
+            <p class="about-me">
                 In the field of engineering I have intermediate knowledge of programs such as
                 Wolfram Mathematica, SIMSCALE CFD, SolidWorks and Matlab.
+            </p>
+            <p class="about-me">
                 On the programming side, I like to work on HTML, CSS, Bootstrap, Flask, RESTful
                 APIs, SQLite and
                 Data Science.
