Fix the PC emoji and the form to send emails

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             <div class="col-lg-4 col-md-6" id="text-1">
                 <h2>What's up?</h2>
                 <p>
-                    I am an aerospace engineer 🚀 with a passion for coding 🖳.
+                    I am an aerospace engineer 🚀 with a passion for coding 💻.
                 </p>
             </div>
         </div>
@@ -55,7 +55,7 @@
             <div class="col-lg-4 col-md-6" id="text-3">
                 <h2>My portfolio</h2>
                 <p>
-                    Check out some projects I did and tell me which one is your favourite.
+                    Check out some projects I've been working on and tell me which one is your favourite.
                 </p>
             </div>
         </div>
