--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,11 +16,13 @@
             <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
             <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
             <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-            <form name="sentMessage" id="contactForm" novalidate>
+            <form action="https://formsubmit.co/552bdff1f538cb3d19a105ee4350492e" method="POST" name="sentMessage" id="contactForm" novalidate> <!--name="sentMessage" id="contactForm" novalidate 552bdff1f538cb3d19a105ee4350492e-->
+                <input type="hidden" name="_subject" value="New email from my page!">
+                <input type="hidden" name="_next" value="https://pablouboldi-website.herokuapp.com/thanks"> <!--value="http://127.0.0.1:5000/thanks"-->
                 <div class="control-group">
                     <div class="form-group floating-label-form-group controls">
                         <label>Name</label>
-                        <input type="text" class="form-control" placeholder="Name" id="name" required
+                        <input name="name" type="text" class="form-control" placeholder="Name" id="name" required
                                data-validation-required-message="Please enter your name.">
                         <p class="help-block text-danger"></p>
                     </div>
@@ -28,7 +30,7 @@
                 <div class="control-group">
                     <div class="form-group floating-label-form-group controls">
                         <label>Email Address</label>
-                        <input type="email" class="form-control" placeholder="Email Address" id="email" required
+                        <input name="email" type="email" class="form-control" placeholder="Email Address" id="email" required
                                data-validation-required-message="Please enter your email address.">
                         <p class="help-block text-danger"></p>
                     </div>
@@ -36,7 +38,7 @@
                 <div class="control-group">
                     <div class="form-group col-xs-12 floating-label-form-group controls">
                         <label>Phone Number</label>
-                        <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required
+                        <input name="phone" type="tel" class="form-control" placeholder="Phone Number" id="phone" required
                                data-validation-required-message="Please enter your phone number.">
                         <p class="help-block text-danger"></p>
                     </div>
@@ -44,7 +46,7 @@
                 <div class="control-group">
                     <div class="form-group floating-label-form-group controls">
                         <label>Message</label>
-                        <textarea rows="5" class="form-control" placeholder="Message" id="message" required
+                        <textarea name="message" rows="5" class="form-control" placeholder="Message" id="message" required
                                   data-validation-required-message="Please enter a message."></textarea>
                         <p class="help-block text-danger"></p>
                     </div>
