Update the color palette and the main background pic

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,7 +18,7 @@ h2 {
 }
 
 p {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     line-height: 1.5;
 }
 
@@ -100,7 +100,7 @@ hr {
 
 #content {
     padding: 10% 2% 10%;
-    background-color: #A2B5BB;
+    background-color: #BFD5DB;
 }
 
 .main-container {
