--- a/templates/header.html
+++ b/templates/header.html
@@ -40,11 +40,17 @@
 <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{url_for('home')}}">PABLO</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup"
+                aria-expanded="false"
+                aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
 
             <ul class="navbar-nav nav ms-auto">
                 <li class="nav-item">
