Add the tic-tac-toe project and clean some html files

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -11,26 +11,31 @@
 <!-- Main Content -->
 <div class="container-fluid" id="content">
     <div class="row">
+
+        <!--            Project 1            -->
         <div class="main-container d-flex flex-column flex-md-row">
             <div class="col-lg-6 col-md-6">
                 <a href="https://github.com/pablouboldi/morse-text-converter"><img class="project-img"
-                                                      src='{{ url_for("static", filename="img/morse.png")}}'
-                                                      alt="project-1-img"></a>
+                                                                                   src='{{ url_for("static", filename="img/morse.png")}}'
+                                                                                   alt="project-1-img"></a>
             </div>
             <div class="col-lg-4 col-md-6" id="text-1">
                 <h2>Morse Code Converter</h2>
                 <p>
                     This app can translate <strong>morse to text</strong> AND <strong>text to morse</strong>. When
-                    translating text to morse, it sounds it out too!.
+                    translating text to morse, it sounds it out too!
                 </p>
             </div>
         </div>
 
+        <!--            Project 2            -->
         <div class="main-container d-flex  flex-column flex-md-row-reverse">
             <div class="col-lg-6 col-md-6">
-                <a href="https://github.com/pablouboldi/wordle-game-stats"><img class="project-img" src='{{ url_for("static", filename="img/wordle.png")}}'
-                                 alt="project-2-img"></a>
+                <a href="https://github.com/pablouboldi/wordle-game-stats"><img class="project-img"
+                                                                                src='{{ url_for("static", filename="img/wordle.png")}}'
+                                                                                alt="project-2-img"></a>
             </div>
+
             <div class="col-lg-4 col-md-6" id="text-2">
                 <h2>Wordle Game Statistics</h2>
                 <p>
@@ -40,20 +45,20 @@
             </div>
         </div>
 
-
-<!--        <div class="main-container d-flex  flex-column flex-md-row">-->
-        <!--            <div class="col-lg-6 col-md-6">-->
-        <!--                <a href="#"><img class="project-img"-->
-        <!--                                                          src='{{ url_for("static", filename="img/portfolio.png")}}'-->
-        <!--                                                          alt="project-3-img"></a>-->
-        <!--            </div>-->
-        <!--            <div class="col-lg-4 col-md-6" id="text-3">-->
-        <!--                <h2>My portfolio</h2>-->
-        <!--                <p>-->
-        <!--                    Check out some projects I did and tell me which one is your favourite.-->
-        <!--                </p>-->
-        <!--            </div>-->
-        <!--        </div>-->
+        <!--            Project 3            -->
+        <div class="main-container d-flex flex-column flex-md-row">
+            <div class="col-lg-6 col-md-6">
+                <a href="https://github.com/pablouboldi/tic-tac-toe"><img class="project-img"
+                                                                                   src='{{ url_for("static", filename="img/tic_tac_toe.png")}}'
+                                                                                   alt="project-3-img"></a>
+            </div>
+            <div class="col-lg-4 col-md-6" id="text-3">
+                <h2>Text-Based Tic-Tac-Toe</h2>
+                <p>
+                    This is a simple implementation of the famous <strong>tic-tac-toe</strong> game.
+                </p>
+            </div>
+        </div>
 
 
     </div>
