--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -15,11 +15,11 @@
         <!--            Project 1            -->
         <div class="main-container d-flex flex-column flex-md-row">
             <div class="col-lg-6 col-md-6">
-                <a href="https://github.com/pablouboldi/morse-text-converter"><img class="project-img"
+                <a href="https://github.com/pablouboldi/morse-text-converter" target="_blank"><img class="project-img"
                                                                                    src='{{ url_for("static", filename="img/morse.png")}}'
                                                                                    alt="project-1-img"></a>
             </div>
-            <div class="col-lg-4 col-md-6" id="text-1">
+            <div class="col-lg-4 col-md-6">
                 <h2>Morse Code Converter</h2>
                 <p>
                     This app can translate <strong>morse to text</strong> AND <strong>text to morse</strong>. When
@@ -29,14 +29,14 @@
         </div>
 
         <!--            Project 2            -->
-        <div class="main-container d-flex  flex-column flex-md-row-reverse">
+        <div class="main-container d-flex flex-column flex-md-row-reverse">
             <div class="col-lg-6 col-md-6">
-                <a href="https://github.com/pablouboldi/wordle-game-stats"><img class="project-img"
+                <a href="https://github.com/pablouboldi/wordle-game-stats" target="_blank"><img class="project-img"
                                                                                 src='{{ url_for("static", filename="img/wordle.png")}}'
                                                                                 alt="project-2-img"></a>
             </div>
 
-            <div class="col-lg-4 col-md-6" id="text-2">
+            <div class="col-lg-4 col-md-6">
                 <h2>Wordle Game Statistics</h2>
                 <p>
                     Do you like playing the <strong>Wordle Game</strong>? With this app, you can keep track of your
@@ -48,14 +48,30 @@
         <!--            Project 3            -->
         <div class="main-container d-flex flex-column flex-md-row">
             <div class="col-lg-6 col-md-6">
-                <a href="https://github.com/pablouboldi/tic-tac-toe"><img class="project-img"
-                                                                                   src='{{ url_for("static", filename="img/tic_tac_toe.png")}}'
-                                                                                   alt="project-3-img"></a>
+                <a href="https://github.com/pablouboldi/tic-tac-toe" target="_blank"><img class="project-img"
+                                                                          src='{{ url_for("static", filename="img/tic_tac_toe.png")}}'
+                                                                          alt="project-3-img"></a>
             </div>
-            <div class="col-lg-4 col-md-6" id="text-3">
+            <div class="col-lg-4 col-md-6">
                 <h2>Text-Based Tic-Tac-Toe</h2>
                 <p>
                     This is a simple implementation of the famous <strong>tic-tac-toe</strong> game.
+                </p>
+            </div>
+        </div>
+
+        <!--            Project 4            -->
+        <div class="main-container d-flex flex-column flex-md-row-reverse">
+            <div class="col-lg-6 col-md-6">
+                <a href="https://github.com/pablouboldi/watermark-img" target="_blank"><img class="project-img"
+                                                                            src='{{ url_for("static", filename="img/watermark.png")}}'
+                                                                            alt="project-4-img"></a>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <h2>Watermark App</h2>
+                <p>
+                    Do you wish to add your brand to your images? Now you can!
+                    This code inserts a <strong>watermark</strong> of your choosing to whichever image you like.
                 </p>
             </div>
         </div>
