--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
 
     <title>Pablo Uboldi</title>
 
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="{{ url_for('static', filename='img/logo.ico')}}">
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -36,7 +36,9 @@
 
 <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{url_for('home')}}">PABLO</a>
+        <a class="navbar-brand" href="{{url_for('home')}}">
+            <img src='{{ url_for("static", filename="img/logo.png")}}' alt="logo-pic" width="30" height="30">
+        </a>
         <button class="navbar-toggler"
                 type="button"
                 data-bs-toggle="collapse"
