--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                                                       src='{{ url_for("static", filename="img/profile.jpg")}}'
                                                       alt="profile-img"></a>
             </div>
-            <div class="col-lg-4 col-md-6" id="text-1">
+            <div class="col-lg-4 col-md-6">
                 <h2>What's up?</h2>
                 <p>
                     I am an aerospace engineer 🚀 with a passion for coding 💻.
@@ -37,7 +37,7 @@
             <div class="col-lg-6 col-md-6">
                 <a href="{{ url_for('static', filename='files/cv-pablo_uboldi_v2.pdf') }}" target="_blank" rel="noreferrer"><img class="index-img  my-auto" src='{{ url_for("static", filename="img/cv.png")}}' alt="cv-img"></a>
             </div>
-            <div class="col-lg-4 col-md-6" id="text-2">
+            <div class="col-lg-4 col-md-6">
                 <h2>My resume</h2>
                 <p>
                     Hey! Do you think I could be a good acquisition to your business? Check out my CV!
@@ -52,7 +52,7 @@
                                                           src='{{ url_for("static", filename="img/portfolio.png")}}'
                                                           alt="portfolio-img"></a>
             </div>
-            <div class="col-lg-4 col-md-6" id="text-3">
+            <div class="col-lg-4 col-md-6">
                 <h2>My portfolio</h2>
                 <p>
                     Check out some projects I've been working on and tell me which one is your favourite.
