--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,7 +6,7 @@
                 <ul class="list-inline text-center">
 
                     <li class="list-inline-item">
-                        <a href="https://www.linkedin.com/in/pablo-adrián-uboldi-71755141/">
+                        <a href="https://www.linkedin.com/in/pablo-adrián-uboldi-71755141/" target="_blank">
                             <span class="fa-stack fa-md">
                                 <i class="fas fa-square fa-stack-2x"></i>
                                 <i class="fa-brands fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -15,7 +15,7 @@
                     </li>
 
                     <li class="list-inline-item">
-                        <a href="https://github.com/pablouboldi">
+                        <a href="https://github.com/pablouboldi" target="_blank">
                             <span class="fa-stack fa-md">
                                 <i class="fas fa-square fa-stack-2x"></i>
                                 <i class="fab fa-github fa-stack-1x fa-inverse"></i>
