Add Breakout Game

--- a/templates/portfolio_v2.html
+++ b/templates/portfolio_v2.html
@@ -85,6 +85,23 @@
                 </div>
             </div>
 
+            <div class="col-lg-4 col-md-6">
+                <div class="project project-radius project-success">
+                    <div class="project-content">
+                        <h3 class="lead">
+                            Breakout Game
+                        </h3>
+                        <p>
+                            This is a super simple GUI implementation of the famous <strong>Breakout Game</strong>.
+                        </p>
+                        <a href="https://github.com/pablouboldi/breakout-game" target="_blank"><img
+                            class="project-img"
+                            src='{{ url_for("static", filename="img/breakout.png")}}'
+                            alt="project-5-img"></a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div><!--/row-->
 </div><!--/container -->
