Add Talyor-Maccoll solution for a 3D cone in supersonic flow

--- a/templates/portfolio_v2.html
+++ b/templates/portfolio_v2.html
@@ -17,6 +17,24 @@
                 <div class="project project-radius project-success">
                     <div class="project-content">
                         <h3 class="lead">
+                            Cone in Supersonic Flow - Taylor-Maccoll
+                        </h3>
+                        <p>
+                            This code solves the <strong>Taylor-Maccoll</strong> differential equations for a 3D cone submerged in a
+                            <strong>supersonic flow</strong>, with graphs included.
+                        </p>
+                        <a href="https://github.com/pablouboldi/cone_in_supersonic_flow" target="_blank"><img
+                            class="project-img"
+                            src='{{ url_for("static", filename="img/supersonic-cone.png")}}'
+                            alt="project-6-img"></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="project project-radius project-success">
+                    <div class="project-content">
+                        <h3 class="lead">
                             Morse Code Converter
                         </h3>
                         <p>
