--- a/templates/about.html
+++ b/templates/about.html
@@ -12,17 +12,22 @@
     <div class="row">
         <div class="col-lg-6 col-md-10 mx-auto">
             <p class="about-me">
-                I graduated from the National Technological University of Buenos Aires, and,
-                currently, I am training myself for becoming a full-stack developer.
+                I am a bilingual aeronautical engineer, graduated in 2021. Was co-Director of the aerodynamics team in
+                the formula SAE project at National Technology University, Haedo. I have extensive experience in the
+                academic field, working as a Fluid Mechanics professor since 2018, in charge of the practical area.
+                Currently, I am training myself for becoming a full-stack developer.
             </p>
             <p class="about-me">
-                In the field of engineering I have intermediate knowledge of programs such as
-                Wolfram Mathematica, SIMSCALE CFD, SolidWorks and Matlab.
+                In the field of engineering I have knowledge of programs such as Wolfram Mathematica, SIMSCALE CFD,
+                SolidWorks and Matlab.
             </p>
             <p class="about-me">
-                On the programming side, I like to work on HTML, CSS, Bootstrap, Flask, RESTful
-                APIs, SQLite and
-                Data Science.
+                On the programming side, I work on Python, HTML, CSS, Bootstrap, Flask, RESTful APIs, SQLite and Data
+                Science.
+            </p>
+            <p class="about-me">
+                I am passionate about all kinds of sports, but specifically football and paddle, which I try to play
+                3 or 4 times a week.
             </p>
         </div>
     </div>
