--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-lg-6 col-md-10 mx-auto">
             <p class="about-me">
-                I am a bilingual aeronautical engineer, graduated in 2021. Was co-Director of the aerodynamics team in
+                I am a bilingual aerospace engineer, graduated in 2021. Was co-Director of the aerodynamics team in
                 the formula SAE project at National Technology University, Haedo. I have extensive experience in the
                 academic field, working as a Fluid Mechanics professor since 2018, in charge of the practical area.
                 Currently, I am training myself for becoming a full-stack developer.
