Update index.html so that it expands vertically in a cellphone

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
 
 <!-- Main Content -->
-<div class="container-fluid" id="content">
+<div class="container-fluid h-100" id="content">
     <div class="row">
 
         <div class="main-container d-flex flex-column flex-md-row">
