--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
 
 <!-- Main Content -->
-<div class="container-fluid vh-100" id="content">
+<div class="container-fluid mh-100" id="content">
     <div class="row">
 
         <div class="main-container d-flex flex-column flex-md-row">
