--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Pablo Uboldi</title>
 
@@ -41,7 +41,7 @@
 <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{url_for('home')}}">
-            <img src='{{ url_for("static", filename="img/logo_4.png")}}' alt="logo-pic" width="70" height="70">
+            <img src='{{ url_for("static", filename="img/logo_4.png")}}' alt="logo-pic" width="45" height="45">
         </a>
         <button class="navbar-toggler"
                 type="button"
