Update header.html and index.html for better responsiveness

--- a/templates/header.html
+++ b/templates/header.html
@@ -41,7 +41,7 @@
 <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{url_for('home')}}">
-            <img src='{{ url_for("static", filename="img/logo_4.png")}}' alt="logo-pic" width="45" height="45">
+            <img src='{{ url_for("static", filename="img/logo_4.png")}}' alt="logo-pic">
         </a>
         <button class="navbar-toggler"
                 type="button"
