--- a/templates/index.html
+++ b/templates/index.html
@@ -20,12 +20,12 @@
     <div class="row">
 
         <div class="main-container d-flex flex-column flex-md-row">
-            <div class="col-lg-6 col-md-6">
+            <div class="col-lg-6 col-md-6 item-container">
                 <a href="{{ url_for('about') }}"><img class="index-img my-auto" id="profile-img"
                                                       src='{{ url_for("static", filename="img/profile.jpg")}}'
                                                       alt="profile-img"></a>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 item-container">
                 <h2>What's up?</h2>
                 <p>
                     I am an aerospace engineer 🚀 with a passion for coding 💻.
@@ -34,12 +34,12 @@
         </div>
 
         <div class="main-container d-flex  flex-column flex-md-row-reverse">
-            <div class="col-lg-6 col-md-6">
+            <div class="col-lg-6 col-md-6 item-container">
                 <a href="{{ url_for('static', filename='files/cv-pablo_uboldi_v2.pdf') }}" target="_blank"
                    rel="noreferrer"><img class="index-img  my-auto" src='{{ url_for("static", filename="img/cv.png")}}'
                                          alt="cv-img"></a>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 item-container">
                 <h2>My resume</h2>
                 <p>
                     Hey! Do you think I could be a good acquisition to your business? Check out my CV!
@@ -49,12 +49,12 @@
 
 
         <div class="main-container d-flex  flex-column flex-md-row">
-            <div class="col-lg-6 col-md-6">
+            <div class="col-lg-6 col-md-6 item-container">
                 <a href="{{ url_for('portfolio') }}"><img class="index-img  my-auto"
                                                           src='{{ url_for("static", filename="img/portfolio.png")}}'
                                                           alt="portfolio-img"></a>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 item-container">
                 <h2>My portfolio</h2>
                 <p>
                     Check out some projects I've been working on and tell me which one is your favourite.
