--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 h1 {
-    font-size: 6vw;
+    font-size: 7vw;
     margin: 0px auto 0px auto;
     font-family: Quicksand, sans-serif;
 }
@@ -117,8 +117,8 @@ hr {
 
 .main-container {
     width: 100%;
-    margin-top: 75px;
-    margin-bottom: 75px;
+    margin-top: 5%;
+    margin-bottom: 5%;
     padding-right: 140px;
     padding-left: 140px;
 }
@@ -132,12 +132,19 @@ hr {
 }
 
 .main-container img {
-    width: 150px;
-    margin-bottom: 50px;
+    width: 40%;
 }
 
 .item-container {
     margin-bottom: 45px;
+}
+
+.item-container h2 {
+    font-size: 4vw;
+}
+
+.item-container p {
+    font-size: 2vw;
 }
 
 #profile-img {
