--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
     <h1 class="title">I am Pablo</h1>
     <figure>
         <blockquote class="blockquote">
-            <p>“Don’t worry about failure; you only have to be right once.”</p>
+            <p class="subheading">“Don’t worry about failure; you only have to be right once.”</p>
         </blockquote>
-        <p class="blockquote-footer">
+        <p class="blockquote-footer author">
             Drew Houston, founder and CEO of Dropbox
         </p>
     </figure>
