Update the responsiveness of the website

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
 <!-- Main Content -->
 <div class="container-fluid" id="content">
     <div class="row">
-        <div class="col-lg-6 col-md-10 mx-auto">
+        <div class="col-lg-6 col-md-10 col-10 mx-auto">
             <p class="about-me">
                 I am a bilingual aerospace engineer, graduated in 2021. Was co-Director of the aerodynamics team in
                 the formula SAE project at National Technology University, Haedo. I have extensive experience in the
