--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,8 +8,7 @@ body {
 
 
 h1 {
-    font-size: 7vw;
-    margin: 0px auto 0px auto;
+    font-size: 210%;
     font-family: Quicksand, sans-serif;
 }
 @media screen and (min-width: 1500px) {
@@ -32,13 +31,14 @@ h2 {
 
 h3 {
     color: #11999E;
+    font-size: 150%;
     font-family: Montserrat, sans-serif;
 }
 
 
 
 .subheading{
-    font-size: 2.5vw;
+    font-size: 70%;
 }
 @media screen and (min-width: 1500px) {
     .subheading{
@@ -127,13 +127,19 @@ hr {
 #header {
     position: relative;
     overflow: hidden;
-    padding: 20% 3% 15%;
+    padding: 23% 3% 3%;
 }
+@media screen and (min-width: 1500px) {
+    #header {
+        padding: 17% 3% 15%;
+    }
+}
+
 
 #header h1{
     position: relative;
     z-index: 2;
-    margin-bottom: 50px;
+    margin-bottom: 35px;
 }
 
 #header img {
@@ -154,11 +160,18 @@ hr {
 
 .main-container {
     width: 100%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    padding-right: 140px;
-    padding-left: 140px;
+    padding-right: 30%;
+    padding-left: 30%;
 }
+@media screen and (min-width: 1500px) {
+    .main-container{
+        padding-right: 15%;
+        padding-left: 15%;
+        margin-top: 3%;
+        margin-bottom: 3%;
+    }
+}
+
 
 .main-container h2 {
     text-align: left;
@@ -242,7 +255,7 @@ hr {
 }
 
 .project-content p {
-    font-size: 130%;
+    font-size: 100%;
 }
 
 .lead {
