--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,29 +5,24 @@ body {
     color: #576F72;
 }
 
-
-
 h1 {
-    font-size: 210%;
+    font-size: 90px;
     font-family: Quicksand, sans-serif;
+    position: relative;
+    margin-bottom: 7%;
 }
-@media screen and (min-width: 1500px) {
-h1 {
-    font-size: 5vw;
+@media screen and (max-width: 767px) {
+    h1 {
+        font-size: 70px;
+        margin-top: 10%;
+    }
 }
-}
-
-
-
-
-
 
 h2 {
-    font-size: 4vw;
+    font-size: 2.5em;
     font-family: Montserrat, sans-serif;
     font-weight: normal;
 }
-
 
 h3 {
     color: #11999E;
@@ -35,44 +30,33 @@ h3 {
     font-family: Montserrat, sans-serif;
 }
 
-
-
-.subheading{
-    font-size: 70%;
+img {
+    width: 30%;
 }
-@media screen and (min-width: 1500px) {
-    .subheading{
-        font-size: 1.2vw;
+@media screen and (max-width: 1079px) {
+    img {
+        width: 40%;
+    }
+}
+@media screen and (max-width: 991px) {
+    img {
+        width: 45%;
+    }
+}
+@media screen and (max-width: 767px) {
+    img {
+        width: 30%;
     }
 }
 
-
-
-
-
-.author {
-    font-size: 1.7vw;
-}
-@media screen and (min-width: 1500px) {
-.author {
-    font-size: 0.8vw;
-}
-}
-
-
-
-
-
-
-
 p {
-    font-size: 2.5vw;
+    font-size: 1.5rem;
     line-height: 1.5;
 }
 
 a {
     color: #576F72;
-    margin: 10px 20px;
+    margin: 0px 20px;
 }
 
 a:hover {
@@ -85,27 +69,25 @@ hr {
     opacity: 0.7;
 }
 
-/* ---------------------------- Navbar ---------------------------- */
+/* ---------------------------- index.html ---------------------------- */
+/* -------------------------------------------------------------------- */
+
+/* ---------------------------- Navigation ---------------------------- */
 
 .navbar {
     font-size: 20px;
     background-color: #DAEAF1;
+    padding-right: 10px;
 }
 
-@media screen and (min-width: 1500px) {
-    .navbar {
-    font-size: 20px;
-    background-color: #DAEAF1;
-}
+.navbar-toggler-icon {
+    height: 20px;
+    width: 20px;
 }
 
 .navbar-brand img{
     width: 30px;
     height: 30px;
-}
-
-.navbar-brand:hover {
-    color: #7D9D9C;
 }
 
 .navbar-nav li {
@@ -122,56 +104,56 @@ hr {
     color: #7D9D9C;
 }
 
-/* ---------------------------- Header ---------------------------- */
+/* ---------------------------- Title ---------------------------- */
 
-#header {
+#title {
     position: relative;
     overflow: hidden;
-    padding: 23% 3% 3%;
+    height: 70vw;
+    min-height: 60vh;
 }
-@media screen and (min-width: 1500px) {
-    #header {
-        padding: 17% 3% 15%;
+
+#title .container-fluid {
+    padding: 15% 8% 10%;
+}
+@media screen and (max-width: 425px) {
+    #title .container-fluid {
+        padding: 15% 10% 3%;
     }
 }
 
-
-#header h1{
-    position: relative;
-    z-index: 2;
-    margin-bottom: 35px;
-}
-
-#header img {
+.wall-img {
     width: 100%;
-    height: auto;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
     opacity: 0.3;
+    object-fit: cover;
 }
-/* ---------------------------- index.html ---------------------------- */
-/* -------------------------------------------------------------------- */
+
+/* ---------------------------- Content ---------------------------- */
 
 #content {
-    padding: 10% 2% 10%;
     background-color: #C6DCE4;
 }
 
-.main-container {
-    width: 100%;
-    padding-right: 30%;
-    padding-left: 30%;
+#content .container-fluid{
+    padding: 10% 8% 7%;
 }
-@media screen and (min-width: 1500px) {
-    .main-container{
-        padding-right: 15%;
-        padding-left: 15%;
-        margin-top: 3%;
-        margin-bottom: 3%;
-    }
+@media screen and (max-width: 425px) {
+    #content .container-fluid{
+    padding: 25% 8% 7%;
+}
 }
 
+#profile-img {
+    border-radius: 50%;
+}
+
+.main-container {
+    margin-bottom: 10%;
+}
 
 .main-container h2 {
     text-align: left;
@@ -181,28 +163,13 @@ hr {
     text-align: left;
 }
 
-.main-container img {
-    width: 40%;
+.col {
+    margin-bottom: 5%;
 }
-
-.item-container {
-    margin-bottom: 45px;
-}
-
-@media screen and (min-width: 1500px) {
-.item-container h2 {
-    font-size: 3vw;
-}
-}
-
-@media screen and (min-width: 1500px) {
-.item-container p {
-    font-size: 1.5vw;
-}
-}
-
-#profile-img {
-    border-radius: 50%;
+@media screen and (max-width: 767px) {
+    .col {
+        margin-bottom: 15%;
+    }
 }
 
 
@@ -240,22 +207,26 @@ hr {
 }
 
 .project-img {
-    height: 150px;
+    width: auto;
+    height: 120px;
     margin-top: 20px;
 }
 
 .project-img:hover {
-    height: 160px;
+    height: 140px;
+    width: auto;
 }
 
-.project-success {	border-color: #6E85B7; }
+.project-success {
+    border-color: #6E85B7;
+}
 
 .project-content {
     padding: 20px;
 }
 
 .project-content p {
-    font-size: 100%;
+    font-size: 120%;
 }
 
 .lead {
