--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,15 +1,90 @@
-{% include "header.html" %}
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- Page Header -->
-<div class="container-fluid" id="header">
-    <h1 class="title">Contact Me</h1>
-    <img class="wall-img" src="{{ url_for('static', filename='img/contact-bg.jpg') }}" alt="contact pic">
-    <p class="subheading">Have questions? I have answers.</p>
-</div>
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Pablo Uboldi</title>
+
+    <link rel="icon" href="{{ url_for('static', filename='img/logo_2.png')}}">
+
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+
+    <!-- Custom fonts for this template -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand&family=Sacramento&display=swap"
+          rel="stylesheet">
+
+    <!-- FontAwesome Kit -->
+    <script src="https://kit.fontawesome.com/9666f27fb4.js" crossorigin="anonymous"></script>
+
+    <!-- Custom styles for this template -->
+    <link href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet">
+
+</head>
+
+<body>
+
+<!--Navigation-->
+<section id="navigation">
+    <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{url_for('home')}}">
+                <img src='{{ url_for("static", filename="img/logo_5.png")}}' alt="logo-pic">
+            </a>
+            <button class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
+                <ul class="navbar-nav nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home') }}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('about') }}">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('portfolio') }}">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('contact') }}">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</section>
+
+<!--Title-->
+<section id="title">
+    <div class="container-fluid">
+        <!-- Title Header -->
+        <img class="wall-img" src="{{ url_for('static', filename='img/contact-bg.jpg') }}" alt="contact pic">
+
+        <h1 class="title">Contact Me</h1>
+        <p class="subheading">Have questions? I have answers.</p>
+
+    </div>
+</section>
 
 <!-- Main Content -->
-<div class="container-fluid" id="content">
-    <div class="row">
+<section id="content">
+    <div class="container-fluid">
+
+        <div class="row">
         <div class="col-lg-6 col-md-10 mx-auto">
             <p class="contact-me">Want to get in touch? Fill out the form below to send me a message and I will get back
                 to you as soon as possible!</p>
@@ -57,7 +132,8 @@
             </form>
         </div>
     </div>
-</div>
+    </div>
+</section>
 
 <hr>
 
