--- a/templates/footer.html
+++ b/templates/footer.html
@@ -31,7 +31,9 @@
 </footer>
 
 <!--Photo by <a href="https://unsplash.com/@jinen?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jinen Shah</a> on <a href="https://unsplash.com/s/photos/minimal-rocket?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
