--- a/templates/portfolio_v2.html
+++ b/templates/portfolio_v2.html
@@ -1,16 +1,89 @@
-{% include "header.html" %}
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- Page Header -->
-<div class="container-fluid" id="header">
-    <h1 class="title">My Projects</h1>
-    <img class="wall-img" src="{{ url_for('static', filename='img/portfolio-bg.jpg') }}" alt="wall-pic">
-    <p class="subheading">Check out what I've been up to.</p>
-</div>
+<head>
 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Pablo Uboldi</title>
+
+    <link rel="icon" href="{{ url_for('static', filename='img/logo_2.png')}}">
+
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+
+    <!-- Custom fonts for this template -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand&family=Sacramento&display=swap"
+          rel="stylesheet">
+
+    <!-- FontAwesome Kit -->
+    <script src="https://kit.fontawesome.com/9666f27fb4.js" crossorigin="anonymous"></script>
+
+    <!-- Custom styles for this template -->
+    <link href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet">
+
+</head>
+
+<body>
+
+<!--Navigation-->
+<section id="navigation">
+    <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{url_for('home')}}">
+                <img src='{{ url_for("static", filename="img/logo_5.png")}}' alt="logo-pic">
+            </a>
+            <button class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
+                <ul class="navbar-nav nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home') }}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('about') }}">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('portfolio') }}">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('contact') }}">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</section>
+
+<!--Title-->
+<section id="title">
+    <div class="container-fluid">
+        <!-- Title Header -->
+        <img class="wall-img" src="{{ url_for('static', filename='img/portfolio-bg.jpg') }}" alt="wall-pic">
+
+        <h1 class="title">My Projects</h1>
+        <p class="subheading">Check out what I've been up to.</p>
+
+    </div>
+</section>
 
 <!-- Main Content -->
-<div class="container-fluid" id="content">
-    <div class="container">
+<section id="content">
+    <div class="container-fluid">
+
         <div class="row">
 
             <div class="col-lg-4 col-md-6">
@@ -20,7 +93,8 @@
                             Cone in Supersonic Flow - Taylor-Maccoll
                         </h3>
                         <p>
-                            This code solves the <strong>Taylor-Maccoll</strong> differential equations for a 3D cone submerged in a
+                            This code solves the <strong>Taylor-Maccoll</strong> differential equations for a 3D
+                            cone submerged in a
                             <strong>supersonic flow</strong>, with graphs included.
                         </p>
                         <a href="https://github.com/pablouboldi/cone_in_supersonic_flow" target="_blank"><img
@@ -57,7 +131,8 @@
                             Wordle Game Statistics
                         </h3>
                         <p>
-                            Do you like playing the <strong>Wordle Game</strong>? With this app, you can keep track of
+                            Do you like playing the <strong>Wordle Game</strong>? With this app, you can keep track
+                            of
                             your progress, as well as your friends'.
                         </p>
                         <a href="https://github.com/pablouboldi/wordle-game-stats" target="_blank"><img
@@ -93,7 +168,8 @@
                         </h3>
                         <p>
                             Do you wish to add your brand to your images? Now you can!
-                            This code inserts a <strong>watermark</strong> of your choosing to whichever image you like.
+                            This code inserts a <strong>watermark</strong> of your choosing to whichever image you
+                            like.
                         </p>
                         <a href="https://github.com/pablouboldi/watermark-img" target="_blank"><img
                             class="project-img"
@@ -121,8 +197,9 @@
             </div>
 
         </div>
-    </div><!--/row-->
-</div><!--/container -->
+
+    </div>
+</section>
 
 
 <hr>
