Update CV in index.html

--- a/templates/portfolio_v2.html
+++ b/templates/portfolio_v2.html
@@ -204,7 +204,7 @@
                         </h3>
                         <p>
                             In this website you can create your own <strong>to-do list</strong> that will be saved for
-                            future use inside your personal user account. I <strong>do NOT share</strong> your data with anyone
+                            future use inside your personal user account. I <strong>do NOT share</strong> your data with anyone.
                         </p>
                         <a href="https://pablo-todo-list.herokuapp.com" target="_blank"><img
                             class="project-img"
