--- a/templates/about.html
+++ b/templates/about.html
@@ -3,114 +3,106 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Pablo Uboldi</title>
+  <title>Pablo Uboldi</title>
 
-    <link rel="icon" href="{{ url_for('static', filename='img/logo_2.png')}}">
+  <link rel="icon" href="{{ url_for('static', filename='img/logo_2.png')}}">
 
-    <!-- Bootstrap core CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 
-    <!-- Custom fonts for this template -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand&family=Sacramento&display=swap"
-          rel="stylesheet">
+  <!-- Custom fonts for this template -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand&family=Sacramento&display=swap" rel="stylesheet">
 
-    <!-- FontAwesome Kit -->
-    <script src="https://kit.fontawesome.com/9666f27fb4.js" crossorigin="anonymous"></script>
+  <!-- FontAwesome Kit -->
+  <script src="https://kit.fontawesome.com/9666f27fb4.js" crossorigin="anonymous"></script>
 
-    <!-- Custom styles for this template -->
-    <link href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet">
 
 </head>
 
 <body>
 
-<!--Navigation-->
-<section id="navigation">
+  <!--Navigation-->
+  <section id="navigation">
     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{{url_for('home')}}">
-                <img src='{{ url_for("static", filename="img/logo_5.png")}}' alt="logo-pic">
-            </a>
-            <button class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{{url_for('home')}}">
+          <img src='{{ url_for("static", filename="img/logo_5.png")}}' alt="logo-pic">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
-                <ul class="navbar-nav nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('home') }}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ url_for('about') }}">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('portfolio') }}">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('contact') }}">Contact</a>
-                    </li>
-                </ul>
-            </div>
+          <ul class="navbar-nav nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{{ url_for('home') }}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{{ url_for('about') }}">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{{ url_for('portfolio') }}">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{{ url_for('contact') }}">Contact</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
-</section>
+  </section>
 
-<!--Title-->
-<section id="title">
+  <!--Title-->
+  <section id="title">
     <div class="container-fluid">
-        <!-- Title Header -->
-        <img class="wall-img" src="{{ url_for('static', filename='img/about-bg.jpg') }}" alt="about pic">
+      <!-- Title Header -->
+      <img class="wall-img" src="{{ url_for('static', filename='img/about-bg.jpg') }}" alt="about pic">
 
-        <h1 class="title">About me</h1>
-        <p class="subheading">This is who I am.</p>
+      <h1 class="title">About me</h1>
+      <p class="subheading">This is who I am.</p>
 
     </div>
-</section>
+  </section>
 
-<!-- Main Content -->
-<section id="content">
+  <!-- Main Content -->
+  <section id="content">
     <div class="container-fluid">
 
-        <div class="row">
-            <div class="col-lg-6 col-md-10 col-10 mx-auto">
-                <p class="about-me">
-                    I am a bilingual aerospace engineer, graduated in 2021. Was co-Director of the aerodynamics team in
-                    the formula SAE project at National Technology University, Haedo. I have extensive experience in the
-                    academic field, working as a Fluid Mechanics professor since 2018, in charge of the practical area.
-                    Currently, I am training myself for becoming a full-stack developer.
-                </p>
-                <p class="about-me">
-                    In the field of engineering I have knowledge of programs such as Wolfram Mathematica, SIMSCALE CFD,
-                    SolidWorks and Matlab.
-                </p>
-                <p class="about-me">
-                    On the programming side, I work on Python, HTML, CSS, Bootstrap, Flask, RESTful APIs, SQLite and
-                    Data
-                    Science.
-                </p>
-                <p class="about-me">
-                    I am passionate about all kinds of sports, but specifically football and paddle, which I try to play
-                    3 or 4 times a week.
-                </p>
-            </div>
+      <div class="row">
+        <div class="col-lg-6 col-md-10 col-10 mx-auto">
+          <p class="about-me">
+            I am a bilingual aerospace engineer, graduated in 2021. Was co-Director of the aerodynamics team in
+            the formula SAE project at National Technology University, Haedo. I have extensive experience in the
+            academic field, working as a Fluid Mechanics professor since 2018, in charge of the practical area.
+            Currently, I am training myself for becoming a full-stack developer.
+          </p>
+          <p class="about-me">
+            In the field of engineering I have knowledge of programs such as Wolfram Mathematica, SIMSCALE CFD,
+            SolidWorks and Matlab.
+          </p>
+          <p class="about-me">
+            On the programming side, I work on Python, HTML, CSS, Bootstrap, Flask, RESTful APIs, SQLite and
+            Data
+            Science.
+          </p>
+          <p class="about-me">
+            I am passionate about all kinds of sports, but specifically football and paddle, which I try to play
+            3 or 4 times a week.
+          </p>
         </div>
+      </div>
     </div>
-</section>
+  </section>
 
 
-<hr>
+  <hr>
 
-{% include "footer.html" %}
+  {% include "footer.html" %}
