--- a/templates/index.html
+++ b/templates/index.html
@@ -3,144 +3,129 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Pablo Uboldi</title>
+  <title>Pablo Uboldi</title>
 
-    <link rel="icon" href="{{ url_for('static', filename='img/logo_2.png')}}">
+  <link rel="icon" href="{{ url_for('static', filename='img/logo_2.png')}}">
 
-    <!-- Bootstrap core CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 
-    <!-- Custom fonts for this template -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand&family=Sacramento&display=swap"
-          rel="stylesheet">
+  <!-- Custom fonts for this template -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand&family=Sacramento&display=swap" rel="stylesheet">
 
-    <!-- FontAwesome Kit -->
-    <script src="https://kit.fontawesome.com/9666f27fb4.js" crossorigin="anonymous"></script>
+  <!-- FontAwesome Kit -->
+  <script src="https://kit.fontawesome.com/9666f27fb4.js" crossorigin="anonymous"></script>
 
-    <!-- Custom styles for this template -->
-    <link href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet">
 
 </head>
 
 <body>
 
-<!--Navigation-->
-<section id="navigation">
+  <!--Navigation-->
+  <section id="navigation">
     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{{url_for('home')}}">
-                <img src='{{ url_for("static", filename="img/logo_5.png")}}' alt="logo-pic">
-            </a>
-            <button class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{{url_for('home')}}">
+          <img src='{{ url_for("static", filename="img/logo_5.png")}}' alt="logo-pic">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
-                <ul class="navbar-nav nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('about') }}">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('portfolio') }}">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ url_for('contact') }}">Contact</a>
-                    </li>
-                </ul>
-            </div>
+          <ul class="navbar-nav nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{{ url_for('about') }}">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{{ url_for('portfolio') }}">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{{ url_for('contact') }}">Contact</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
-</section>
+  </section>
 
-<!--Title-->
-<section id="title">
+  <!--Title-->
+  <section id="title">
     <div class="container-fluid">
-        <!-- Title Header -->
-        <img class="wall-img" src="{{ url_for('static', filename='img/main-bg.jpg') }}" alt="wall-pic">
+      <!-- Title Header -->
+      <img class="wall-img" src="{{ url_for('static', filename='img/main-bg.jpg') }}" alt="wall-pic">
 
-            <h1 class="title">I am Pablo</h1>
-            <figure>
-                <blockquote class="blockquote">
-                    <p>“Don’t worry about failure; you only have to be right once.”</p>
-                </blockquote>
-                <p class="blockquote-footer">
-                    Drew Houston, founder and CEO of Dropbox
-                </p>
-            </figure>
+      <h1 class="title">I am Pablo</h1>
+      <figure>
+        <blockquote class="blockquote">
+          <p>“Don’t worry about failure; you only have to be right once.”</p>
+        </blockquote>
+        <p class="blockquote-footer">
+          Drew Houston, founder and CEO of Dropbox
+        </p>
+      </figure>
 
     </div>
-</section>
+  </section>
 
 
-<!-- Main Content -->
-<section id="content">
+  <!-- Main Content -->
+  <section id="content">
     <div class="container-fluid">
 
-        <div class="row">
-            <div class="main-container d-flex flex-column flex-md-row">
-                <div class="col col-lg-6 col-md-6">
-                    <a href="{{ url_for('about') }}"><img class="index-img" id="profile-img"
-                                                          src='{{ url_for("static", filename="img/profile.jpg")}}'
-                                                          alt="profile-img"></a>
-                </div>
-                <div class="col col-lg-4 col-md-4">
-                    <h2>What's up?</h2>
-                    <p>
-                        I am an aerospace engineer 🚀 with a passion for coding 💻.
-                    </p>
-                </div>
-            </div>
-
-            <div class="main-container d-flex flex-column flex-md-row-reverse">
-                <div class="col col-lg-6 col-md-6">
-                    <a href="{{ url_for('static', filename='files/cv-pablo_uboldi_v2.pdf') }}" target="_blank"
-                       rel="noreferrer"><img class="index-img  my-auto"
-                                             src='{{ url_for("static", filename="img/cv.png")}}'
-                                             alt="cv-img"></a>
-                </div>
-                <div class="col col-lg-4 col-md-4">
-                    <h2>My resume</h2>
-                    <p>
-                        Hey! Do you think I could be a good acquisition to your business? Check out my CV!
-                    </p>
-                </div>
-            </div>
-
-
-            <div class="main-container d-flex flex-column flex-md-row">
-                <div class="col col-lg-6 col-md-6">
-                    <a href="{{ url_for('portfolio') }}"><img class="index-img  my-auto"
-                                                              src='{{ url_for("static", filename="img/portfolio.png")}}'
-                                                              alt="portfolio-img"></a>
-                </div>
-                <div class="col col-lg-4 col-md-4">
-                    <h2>My portfolio</h2>
-                    <p>
-                        Check out some projects I've been working on and tell me which one is your favourite.
-                    </p>
-                </div>
-            </div>
-
-
+      <div class="row">
+        <div class="main-container d-flex flex-column flex-md-row">
+          <div class="col col-lg-6 col-md-6">
+            <a href="{{ url_for('about') }}"><img class="index-img" id="profile-img" src='{{ url_for("static", filename="img/profile.jpg")}}' alt="profile-img"></a>
+          </div>
+          <div class="col col-lg-4 col-md-4">
+            <h2>What's up?</h2>
+            <p>
+              I am an aerospace engineer 🚀 with a passion for coding 💻.
+            </p>
+          </div>
         </div>
-    </div>
-</section>
-<hr>
 
-{% include "footer.html" %}
+        <div class="main-container d-flex flex-column flex-md-row-reverse">
+          <div class="col col-lg-6 col-md-6">
+            <a href="{{ url_for('static', filename='files/pablos_resume.pdf') }}" target="_blank" rel="noreferrer"><img class="index-img  my-auto" src='{{ url_for("static", filename="img/cv.png")}}' alt="cv-img"></a>
+          </div>
+          <div class="col col-lg-4 col-md-4">
+            <h2>My resume</h2>
+            <p>
+              Hey! Do you think I could be a good acquisition to your business? Check out my CV!
+            </p>
+          </div>
+        </div>
+
+
+        <div class="main-container d-flex flex-column flex-md-row">
+          <div class="col col-lg-6 col-md-6">
+            <a href="{{ url_for('portfolio') }}"><img class="index-img  my-auto" src='{{ url_for("static", filename="img/portfolio.png")}}' alt="portfolio-img"></a>
+          </div>
+          <div class="col col-lg-4 col-md-4">
+            <h2>My portfolio</h2>
+            <p>
+              Check out some projects I've been working on and tell me which one is your favourite.
+            </p>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </section>
+  <hr>
+
+  {% include "footer.html" %}
