Add Atomex website

--- a/templates/portfolio_v2.html
+++ b/templates/portfolio_v2.html
@@ -204,12 +204,34 @@
                         </h3>
                         <p>
                             In this website you can create your own <strong>to-do list</strong> that will be saved for
-                            future use inside your personal user account. I <strong>do NOT share</strong> your data with anyone.
+                            future use inside your personal user account. I <strong>do NOT share</strong> your data with
+                            anyone.
                         </p>
                         <a href="https://todo-list-uboldi.up.railway.app" target="_blank"><img
                             class="project-img"
                             src='{{ url_for("static", filename="img/todo.png")}}'
                             alt="project-7-img"></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="project project-radius project-success">
+                    <div class="project-content">
+                        <h3 class="lead">
+                            Football Statistics Website
+                        </h3>
+                        <p>
+                            In this website you can explore a wide range of football statistics on this website,
+                            including tournament match scores, player yellow and red cards, goal counts, positions
+                            table, and a comprehensive goal scorers table. Whether you're interested in match outcomes,
+                            player performance, or league standings, this platform offers a user-friendly interface for
+                            all your football data needs.
+                        </p>
+                        <a href="https://atomos.up.railway.app/" target="_blank"><img
+                            class="project-img"
+                            src='{{ url_for("static", filename="img/football-player.png")}}'
+                            alt="project-8-img"></a>
                     </div>
                 </div>
             </div>
