Clean and update the whole project

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,6 @@
+{% block footer %}
 <!-- Footer -->
+<hr>
 <footer id="footer">
   <div class="container footer-container">
     <div class="row">
@@ -6,7 +8,7 @@
         <ul class="list-inline text-center">
 
           <li class="list-inline-item">
-            <a href="https://www.linkedin.com/in/pablo-adrián-uboldi-71755141/" target="_blank">
+            <a href="https://www.linkedin.com/in/pablo-uboldi/" target="_blank">
               <span class="fa-stack fa-md">
                 <i class="fas fa-square fa-stack-2x"></i>
                 <i class="fa-brands fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -32,6 +34,4 @@
 
 <!--Photo by <a href="https://unsplash.com/@jinen?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jinen Shah</a> on <a href="https://unsplash.com/s/photos/minimal-rocket?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% endblock %}
