--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,14 +8,6 @@ body {
 h1 {
     font-size: 90px;
     font-family: Quicksand, sans-serif;
-    position: relative;
-    margin-bottom: 7%;
-}
-@media screen and (max-width: 767px) {
-    h1 {
-        font-size: 70px;
-        margin-top: 10%;
-    }
 }
 
 h2 {
@@ -28,25 +20,6 @@ h3 {
     color: #11999E;
     font-size: 150%;
     font-family: Montserrat, sans-serif;
-}
-
-img {
-    width: 30%;
-}
-@media screen and (max-width: 1079px) {
-    img {
-        width: 40%;
-    }
-}
-@media screen and (max-width: 991px) {
-    img {
-        width: 45%;
-    }
-}
-@media screen and (max-width: 767px) {
-    img {
-        width: 30%;
-    }
 }
 
 p {
@@ -69,15 +42,12 @@ hr {
     opacity: 0.7;
 }
 
-/* ---------------------------- index.html ---------------------------- */
-/* -------------------------------------------------------------------- */
-
 /* ---------------------------- Navigation ---------------------------- */
+/* -------------------------------------------------------------------- */
 
 .navbar {
     font-size: 20px;
     background-color: #DAEAF1;
-    padding-right: 10px;
 }
 
 .navbar-toggler-icon {
@@ -105,79 +75,39 @@ hr {
 }
 
 /* ---------------------------- Title ---------------------------- */
+/* --------------------------------------------------------------- */
 
-#title {
-    position: relative;
-    overflow: hidden;
-    height: 70vw;
-    min-height: 60vh;
-}
-
-#title .container-fluid {
-    padding: 15% 8% 10%;
-}
-@media screen and (max-width: 425px) {
-    #title .container-fluid {
-        padding: 15% 10% 3%;
-    }
+.image-container {
+  position: relative;
+  height: 700px;
+  overflow: hidden;
 }
 
-.wall-img {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0.3;
-    object-fit: cover;
+.text-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-/* ---------------------------- Content ---------------------------- */
+/* ---------------------------- index.html ---------------------------- */
+/* -------------------------------------------------------------------- */
 
-#content {
-    background-color: #C6DCE4;
+.img-home {
+  max-width: 13rem;
+  height: auto;
 }
-
-#content .container-fluid{
-    padding: 10% 8% 7%;
-}
-@media screen and (max-width: 425px) {
-    #content .container-fluid{
-    padding: 25% 8% 7%;
-}
-}
-
-#profile-img {
-    border-radius: 50%;
-}
-
-.main-container {
-    margin-bottom: 10%;
-}
-
-.main-container h2 {
-    text-align: left;
-}
-
-.main-container p {
-    text-align: left;
-}
-
-.col {
-    margin-bottom: 5%;
-}
-@media screen and (max-width: 767px) {
-    .col {
-        margin-bottom: 15%;
-    }
-}
-
 
 /* ---------------------------- about.html ---------------------------- */
 /* -------------------------------------------------------------------- */
 
 .about-me {
-    text-align: left;
     font-size: 130%;
 }
 
@@ -225,10 +155,6 @@ hr {
     padding: 20px;
 }
 
-.project-content p {
-    font-size: 120%;
-}
-
 .lead {
     margin-bottom: 20px;
     font-size: 2rem;
@@ -252,5 +178,3 @@ hr {
 .footer-container a:hover{
     color: #6E85B7;
 }
-
-
