--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,130 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
 
-<head>
+{% block title %}
+<img class="img-fluid opacity-25" src="{{ url_for('static', filename='img/contact-bg.jpg') }}" alt="contact pic">
+<div class="text-overlay">
+  <h1 class="title">Contact Me</h1>
+  <p class="subheading">Have questions? I have answers.</p>
+</div>
+{% endblock %}
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Pablo Uboldi</title>
-
-  <link rel="icon" href="{{ url_for('static', filename='img/logo_2.png')}}">
-
-  <!-- Bootstrap core CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
-
-  <!-- Custom fonts for this template -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand&family=Sacramento&display=swap" rel="stylesheet">
-
-  <!-- FontAwesome Kit -->
-  <script src="https://kit.fontawesome.com/9666f27fb4.js" crossorigin="anonymous"></script>
-
-  <!-- Custom styles for this template -->
-  <link href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet">
-
-</head>
-
-<body>
-
-  <!--Navigation-->
-  <section id="navigation">
-    <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{{url_for('home')}}">
-          <img src='{{ url_for("static", filename="img/logo_5.png")}}' alt="logo-pic">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-
-          <ul class="navbar-nav nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ url_for('home') }}">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ url_for('about') }}">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ url_for('portfolio') }}">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{{ url_for('contact') }}">Contact</a>
-            </li>
-          </ul>
+{% block body %}
+<div class="row">
+  <div class="col-lg-6 col-md-10 mx-auto">
+    <p class="contact-me">Want to get in touch? Fill out the form below to send me a message and I will get
+      back to you as soon as possible!</p>
+    <form action="https://formsubmit.co/552bdff1f538cb3d19a105ee4350492e" method="POST" name="sentMessage"
+          id="contactForm" novalidate>
+      <!--name="sentMessage" id="contactForm" novalidate 552bdff1f538cb3d19a105ee4350492e-->
+      <input type="hidden" name="_subject" value="New email from my page!">
+      <input type="hidden" name="_next" value="https://pablouboldi-website.herokuapp.com/thanks">
+      <!--value="http://127.0.0.1:5000/thanks"-->
+      <div class="control-group">
+        <div class="form-group floating-label-form-group controls">
+          <label>Name</label>
+          <input name="name" type="text" class="form-control" placeholder="Name" id="name" required
+                 data-validation-required-message="Please enter your name.">
+          <p class="help-block text-danger"></p>
         </div>
       </div>
-    </nav>
-  </section>
-
-  <!--Title-->
-  <section id="title">
-    <div class="container-fluid">
-      <!-- Title Header -->
-      <img class="wall-img" src="{{ url_for('static', filename='img/contact-bg.jpg') }}" alt="contact pic">
-
-      <h1 class="title">Contact Me</h1>
-      <p class="subheading">Have questions? I have answers.</p>
-
-    </div>
-  </section>
-
-  <!-- Main Content -->
-  <section id="content">
-    <div class="container-fluid">
-
-      <div class="row">
-        <div class="col-lg-6 col-md-10 mx-auto">
-          <p class="contact-me">Want to get in touch? Fill out the form below to send me a message and I will get back
-            to you as soon as possible!</p>
-          <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
-          <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
-          <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-          <form action="https://formsubmit.co/552bdff1f538cb3d19a105ee4350492e" method="POST" name="sentMessage" id="contactForm" novalidate>
-            <!--name="sentMessage" id="contactForm" novalidate 552bdff1f538cb3d19a105ee4350492e-->
-            <input type="hidden" name="_subject" value="New email from my page!">
-            <input type="hidden" name="_next" value="https://pablouboldi-website.herokuapp.com/thanks">
-            <!--value="http://127.0.0.1:5000/thanks"-->
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls">
-                <label>Name</label>
-                <input name="name" type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls">
-                <label>Email Address</label>
-                <input name="email" type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group col-xs-12 floating-label-form-group controls">
-                <label>Phone Number</label>
-                <input name="phone" type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls">
-                <label>Message</label>
-                <textarea name="message" rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <br>
-            <div id="success"></div>
-            <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
-          </form>
+      <div class="control-group">
+        <div class="form-group floating-label-form-group controls">
+          <label>Email Address</label>
+          <input name="email" type="email" class="form-control" placeholder="Email Address" id="email"
+                 required data-validation-required-message="Please enter your email address.">
+          <p class="help-block text-danger"></p>
         </div>
       </div>
-    </div>
-  </section>
-
-  <hr>
-
-  {% include "footer.html" %}
+      <div class="control-group">
+        <div class="form-group col-xs-12 floating-label-form-group controls">
+          <label>Phone Number</label>
+          <input name="phone" type="tel" class="form-control" placeholder="Phone Number" id="phone"
+                 required data-validation-required-message="Please enter your phone number.">
+          <p class="help-block text-danger"></p>
+        </div>
+      </div>
+      <div class="control-group">
+        <div class="form-group floating-label-form-group controls">
+          <label>Message</label>
+          <textarea name="message" rows="5" class="form-control" placeholder="Message" id="message"
+                    required data-validation-required-message="Please enter a message."></textarea>
+          <p class="help-block text-danger"></p>
+        </div>
+      </div>
+      <br>
+      <div id="success"></div>
+      <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+    </form>
+  </div>
+</div>
+{% endblock %}
