--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,84 +1,165 @@
-{% include "header.html" %}
+{% extends "layout.html" %}
 
-<!-- Page Header -->
-<div class="container-fluid" id="header">
-    <h1 class="title">My Projects</h1>
-    <img class="wall-img" src="{{ url_for('static', filename='img/portfolio-bg.jpg') }}" alt="wall-pic">
-    <p class="subheading">Check out what I've been up to.</p>
+{% block title %}
+<img class="img-fluid opacity-25" src="{{ url_for('static', filename='img/portfolio-bg.jpg') }}" alt="wall-pic">
+<div class="text-overlay">
+  <h1 class="title">My Projects</h1>
+  <p class="subheading">Check out what I've been up to.</p>
 </div>
+{% endblock %}
 
+{% block body %}
+<div class="row">
 
-<!-- Main Content -->
-<div class="container-fluid" id="content">
-    <div class="row">
-
-        <!--            Project 1            -->
-        <div class="main-container d-flex flex-column flex-md-row">
-            <div class="col-lg-6 col-md-6">
-                <a href="https://github.com/pablouboldi/morse-text-converter" target="_blank"><img class="project-img"
-                                                                                   src='{{ url_for("static", filename="img/morse.png")}}'
-                                                                                   alt="project-1-img"></a>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <h2>Morse Code Converter</h2>
-                <p>
-                    This app can translate <strong>morse to text</strong> AND <strong>text to morse</strong>. When
-                    translating text to morse, it sounds it out too!
-                </p>
-            </div>
-        </div>
-
-        <!--            Project 2            -->
-        <div class="main-container d-flex flex-column flex-md-row-reverse">
-            <div class="col-lg-6 col-md-6">
-                <a href="https://github.com/pablouboldi/wordle-game-stats" target="_blank"><img class="project-img"
-                                                                                src='{{ url_for("static", filename="img/wordle.png")}}'
-                                                                                alt="project-2-img"></a>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <h2>Wordle Game Statistics</h2>
-                <p>
-                    Do you like playing the <strong>Wordle Game</strong>? With this app, you can keep track of your
-                    progress, as well as your friends'. It even graphs the results so you can see who is winning!
-                </p>
-            </div>
-        </div>
-
-        <!--            Project 3            -->
-        <div class="main-container d-flex flex-column flex-md-row">
-            <div class="col-lg-6 col-md-6">
-                <a href="https://github.com/pablouboldi/tic-tac-toe" target="_blank"><img class="project-img"
-                                                                          src='{{ url_for("static", filename="img/tic_tac_toe.png")}}'
-                                                                          alt="project-3-img"></a>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <h2>Text-Based Tic-Tac-Toe</h2>
-                <p>
-                    This is a simple implementation of the famous <strong>tic-tac-toe</strong> game.
-                </p>
-            </div>
-        </div>
-
-        <!--            Project 4            -->
-        <div class="main-container d-flex flex-column flex-md-row-reverse">
-            <div class="col-lg-6 col-md-6">
-                <a href="https://github.com/pablouboldi/watermark-img" target="_blank"><img class="project-img"
-                                                                            src='{{ url_for("static", filename="img/watermark.png")}}'
-                                                                            alt="project-4-img"></a>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <h2>Watermark App</h2>
-                <p>
-                    Do you wish to add your brand to your images? Now you can!
-                    This code inserts a <strong>watermark</strong> of your choosing to whichever image you like.
-                </p>
-            </div>
-        </div>
-
-
+  <div class="col-lg-4 col-md-6">
+    <div class="project project-radius project-success">
+      <div class="project-content">
+        <h3 class="lead">
+          Cone in Supersonic Flow - Taylor-Maccoll
+        </h3>
+        <h5>
+          This code solves the <strong>Taylor-Maccoll</strong> differential equations for a 3D
+          cone submerged in a
+          <strong>supersonic flow</strong>, with graphs included.
+        </h5>
+        <a href="https://github.com/pablouboldi/cone_in_supersonic_flow" target="_blank"><img
+          class="project-img"
+          src='{{ url_for("static", filename="img/supersonic-cone.png")}}'
+          alt="project-6-img"></a>
+      </div>
     </div>
-</div>
-<hr>
+  </div>
 
-{% include "footer.html" %}
+  <div class="col-lg-4 col-md-6">
+    <div class="project project-radius project-success">
+      <div class="project-content">
+        <h3 class="lead">
+          Morse Code Converter
+        </h3>
+        <h5>
+          This app can translate <strong>morse to text</strong> AND <strong>text to morse</strong>.
+          When translating text to morse, it sounds it out too!
+        </h5>
+        <a href="https://github.com/pablouboldi/morse-text-converter" target="_blank"><img
+          class="project-img"
+          src='{{ url_for("static", filename="img/morse.png")}}'
+          alt="project-1-img"
+        ></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6">
+    <div class="project project-radius project-success">
+      <div class="project-content">
+        <h3 class="lead">
+          Wordle Game Statistics
+        </h3>
+        <h5>
+          Do you like playing the <strong>Wordle Game</strong>? With this app, you can keep track
+          of
+          your progress, as well as your friends'.
+        </h5>
+        <a href="https://github.com/pablouboldi/wordle-game-stats" target="_blank"><img
+          class="project-img"
+          src='{{ url_for("static", filename="img/wordle.png")}}'
+          alt="project-2-img"></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6">
+    <div class="project project-radius project-success">
+      <div class="project-content">
+        <h3 class="lead">
+          Text-Based Tic-Tac-Toe
+        </h3>
+        <h5>
+          This is a simple implementation of the famous <strong>tic-tac-toe</strong> game.
+        </h5>
+        <a href="https://github.com/pablouboldi/tic-tac-toe" target="_blank"><img
+          class="project-img"
+          src='{{ url_for("static", filename="img/tic_tac_toe.png")}}'
+          alt="project-3-img"></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6">
+    <div class="project project-radius project-success">
+      <div class="project-content">
+        <h3 class="lead">
+          Watermark App
+        </h3>
+        <h5>
+          Do you wish to add your brand to your images? Now you can!
+          This code inserts a <strong>watermark</strong> of your choosing to whichever image you
+          like.
+        </h5>
+        <a href="https://github.com/pablouboldi/watermark-img" target="_blank"><img
+          class="project-img"
+          src='{{ url_for("static", filename="img/watermark.png")}}'
+          alt="project-4-img"></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6">
+    <div class="project project-radius project-success">
+      <div class="project-content">
+        <h3 class="lead">
+          Breakout Game
+        </h3>
+        <h5>
+          This is a super simple GUI implementation of the famous <strong>Breakout Game</strong>.
+        </h5>
+        <a href="https://github.com/pablouboldi/breakout-game" target="_blank"><img
+          class="project-img"
+          src='{{ url_for("static", filename="img/breakout.png")}}'
+          alt="project-5-img"></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6">
+    <div class="project project-radius project-success">
+      <div class="project-content">
+        <h3 class="lead">
+          To-do List Website
+        </h3>
+        <h5>
+          In this website you can create your own <strong>to-do list</strong> that will be saved for
+          future use inside your personal user account. I <strong>do NOT share</strong> your data with
+          anyone.
+        </h5>
+        <a href="https://todo-list-uboldi.up.railway.app" target="_blank"><img
+          class="project-img"
+          src='{{ url_for("static", filename="img/todo.png")}}'
+          alt="project-7-img"></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6">
+    <div class="project project-radius project-success">
+      <div class="project-content">
+        <h3 class="lead">
+          Football Statistics Website
+        </h3>
+        <h5>
+          In this website you can explore a wide range of football statistics,
+          including tournament match scores, player yellow and red cards, goal counts, positions
+          table, and a comprehensive goal scorers table. Whether you're interested in match outcomes,
+          player performance, or league standings, this platform offers a user-friendly interface for
+          all your football data needs.
+        </h5>
+        <a href="https://atomos.up.railway.app/" target="_blank"><img
+          class="project-img"
+          src='{{ url_for("static", filename="img/football-player.png")}}'
+          alt="project-8-img"></a>
+      </div>
+    </div>
+  </div>
+
+</div>
+{% endblock %}
