--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -1,77 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
 
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Pablo Uboldi</title>
-
-  <link rel="icon" href="{{ url_for('static', filename='img/logo_2.png')}}">
-
-  <!-- Bootstrap core CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
-
-  <!-- Custom fonts for this template -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand&family=Sacramento&display=swap" rel="stylesheet">
-
-  <!-- FontAwesome Kit -->
-  <script src="https://kit.fontawesome.com/9666f27fb4.js" crossorigin="anonymous"></script>
-
-  <!-- Custom styles for this template -->
-  <link href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet">
-
-</head>
-
-<body>
-
-  <!--Navigation-->
-  <section id="navigation">
-    <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{{url_for('home')}}">
-          <img src='{{ url_for("static", filename="img/logo_4.png")}}' alt="logo-pic">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-
-          <ul class="navbar-nav nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ url_for('home') }}">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ url_for('about') }}">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ url_for('portfolio') }}">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{{ url_for('contact') }}">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </section>
-
-  <!--Title-->
-  <section id="title">
-    <div class="container-fluid">
-      <!-- Title Header -->
-      <img class="wall-img" src="{{ url_for('static', filename='img/thanks-bg.jpg') }}" alt="thanks pic">
-
-      <h1 class="title">Thank you!</h1>
-      <p class="subheading">Your message has been sent successfully.</p>
-
-    </div>
-  </section>
-
-  <hr>
-
-  {% include "footer.html" %}
+{% block title %}
+<img class="wall-img" src="{{ url_for('static', filename='img/thanks-bg.jpg') }}" alt="thanks pic">
+<h1 class="title">Thank you!</h1>
+<p class="subheading">Your message has been sent successfully.</p>
+{% endblock %}
