Update about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -22,9 +22,8 @@
       SolidWorks and Matlab.
     </p>
     <p>
-      On the programming side, I work on Python, HTML, CSS, Bootstrap, Flask, RESTful APIs, SQLite and
-      Data
-      Science.
+      On the programming side, I work on Python, JavaScript, HTML, CSS, Bootstrap, React, Django, Flask, RESTful APIs,
+      Postgres and SQLite.
     </p>
     <p>
       I am passionate about all kinds of sports, but specifically football and paddle, which I try to play
